<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ScrollView>

    <TextView
        android:id="@+id/tvServerSocketAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/exchange_images_address"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvServerSocketPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/exchange_images_port"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvServerSocketMessages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Grey"
            android:scrollbars="vertical"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </ScrollView>

    <ImageView
        android:id="@+id/ivServerSocketImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher" />

    <ToggleButton
        android:id="@+id/togServerSocket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toggleServer"
        android:text="ToggleButton"
        android:textOff="@string/exchange_images_start"
        android:textOn="@string/exchange_images_stop" />

</LinearLayout>
